# aidlc-workflows

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  codebuild.yml
scripts/aidlc-designreview/: CHANGELOG.md  INSTALLATION.md  LEGAL_DISCLAIMER.md  MONOREPO_INSTALLATION.md  README.md  pyproject.toml
scripts/aidlc-designreview/config/patterns/: api-gateway.md  cqrs.md  layered-architecture.md  message-broker.md  repository.md
scripts/aidlc-designreview/config/prompts/: critique-v1.md  gap-v1.md
scripts/aidlc-designreview/docs/: HOOK_CONVERSION_PLAN.md
scripts/aidlc-designreview/docs/ai-security/: BEDROCK_GUARDRAILS.md  BIAS_AND_FAIRNESS.md  MODEL_LEGAL_APPROVAL.md  MONITORING_AND_ACCESS_CONTROL.md
scripts/aidlc-designreview/docs/hook/: TESTING.md
scripts/aidlc-designreview/docs/security/: AWS_BEDROCK_SECURITY_GUIDELINES.md  AWS_SERVICE_NAMING_STANDARDS.md  DATA_CLASSIFICATION_AND_ENCRYPTION.md  RISK_ASSESSMENT.md  SECURITY_SCAN_RESULTS.md  THREAT_MODEL.md
scripts/aidlc-designreview/tool-install/: README.md
scripts/aidlc-designreview/tool-install/patterns/: bulkhead.md  caching.md  cdn.md  circuit-breaker.md  event-driven.md  event-sourcing.md  load-balancer.md  microservices.md  retry.md  rpc.md
scripts/aidlc-designreview/tool-install/prompts/: alternatives-v1.md
scripts/aidlc-designreview/tool-install/templates/: design-review-report.md
scripts/aidlc-evaluator/: pyproject.toml
src/aidlc_workflows/: __init__.py
